Styled UI with atalantafx library